--- a/new.plone.org/static/originals/documentation.html
+++ b/new.plone.org/static/originals/documentation.html
@@ -12,7 +12,7 @@
         <style type="text/css" media="all">@import url(../ie.css);</style>
     <![endif]-->	
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js" type="text/javascript"></script>
 	<script src="../jquery-ui-accordion.js" type="text/javascript"></script>
 
 	<script type="text/javascript">
@@ -70,7 +70,7 @@
 				   title="Close this panel">&times;</a>
 				<h2>Get help</h2>
 
-				<p>Visit our <a href="">chat room</a>, <a href="">forums</a> and more.
+				<p>Visit our <a href="">chat room</a>, <a href="">forums</a> and more.</p>
 
 				<ul>
 					<li><a href="">How to ask for help</a></li>
@@ -144,7 +144,6 @@
 					    <h4><a href="">Asking for help</a></h4>
 						<p>How to ask for help when you have a problem. Following these simple steps will make everything easier both for yourself and us.</p>
 					  </li>
-					  <li>
 					</ul>
 
 					<h3><a href="">Installation (23)</a></h3>
@@ -181,7 +180,6 @@
 					    <h4><a href="">Asking for help</a></h4>
 						<p>How to ask for help when you have a problem. Following these simple steps will make everything easier both for yourself and us.</p>
 					  </li>
-					  <li>
 					</ul>
 
 					<h3><a href="">Configuration and Setup</a></h3>
@@ -218,7 +216,6 @@
 					    <h4><a href="">Asking for help</a></h4>
 						<p>How to ask for help when you have a problem. Following these simple steps will make everything easier both for yourself and us.</p>
 					  </li>
-					  <li>
 					</ul>
 
 					<h3><a href="">Managing Content (45)</a></h3>
@@ -255,7 +252,6 @@
 					    <h4><a href="">Asking for help</a></h4>
 						<p>How to ask for help when you have a problem. Following these simple steps will make everything easier both for yourself and us.</p>
 					  </li>
-					  <li>
 					</ul>
 
 					<h3><a href="">Developing for Plone (85)</a></h3>
@@ -292,7 +288,6 @@
 					    <h4><a href="">Asking for help</a></h4>
 						<p>How to ask for help when you have a problem. Following these simple steps will make everything easier both for yourself and us.</p>
 					  </li>
-					  <li>
 					</ul>
 
 					<h3><a href="">Visual Design (79)</a></h3>
@@ -329,7 +324,6 @@
 					    <h4><a href="">Asking for help</a></h4>
 						<p>How to ask for help when you have a problem. Following these simple steps will make everything easier both for yourself and us.</p>
 					  </li>
-					  <li>
 					</ul>
 
 					<h3><a href="">Users, Authentication and Permissions (63)</a></h3>
@@ -366,7 +360,6 @@
 					    <h4><a href="">Asking for help</a></h4>
 						<p>How to ask for help when you have a problem. Following these simple steps will make everything easier both for yourself and us.</p>
 					  </li>
-					  <li>
 					</ul>
 
 					<h3><a href="">Internationalization and Localization (7)</a></h3>
@@ -403,7 +396,6 @@
 					    <h4><a href="">Asking for help</a></h4>
 						<p>How to ask for help when you have a problem. Following these simple steps will make everything easier both for yourself and us.</p>
 					  </li>
-					  <li>
 					</ul>
 
 					<h3><a href="">Upgrading and Moving (3)</a></h3>
@@ -440,7 +432,6 @@
 					    <h4><a href="">Asking for help</a></h4>
 						<p>How to ask for help when you have a problem. Following these simple steps will make everything easier both for yourself and us.</p>
 					  </li>
-					  <li>
 					</ul>
 
 					<h3><a href="">Navigation (19)</a></h3>
@@ -477,7 +468,6 @@
 					    <h4><a href="">Asking for help</a></h4>
 						<p>How to ask for help when you have a problem. Following these simple steps will make everything easier both for yourself and us.</p>
 					  </li>
-					  <li>
 					</ul>
 
 					<h3><a href="">Contributing to plone.org</a></h3>
@@ -514,7 +504,6 @@
 					    <h4><a href="">Asking for help</a></h4>
 						<p>How to ask for help when you have a problem. Following these simple steps will make everything easier both for yourself and us.</p>
 					  </li>
-					  <li>
 					</ul>
 				</div>
 
