Make sure we get the CSS from plone.org, and no need to load jQuery in Trac.
svn path=/new.plone.org/trunk/; revision=24977

--- a/new.plone.org/static/trac.html
+++ b/new.plone.org/static/trac.html
@@ -5,17 +5,13 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	<title>plone.org redesign prototype</title>
-	<style type="text/css" media="screen">
-		@import url("/plone.css");
-	</style>
+	<link rel="stylesheet" href="http://plone.org/plone.css" type="text/css" media="screen" />
 	<!--[if IE]>
         <style type="text/css" media="all">@import url(/ie.css);</style>
     <![endif]-->	
 
 	<link rel="stylesheet" href="http://dev.plone.org/plone/chrome/common/css/diff.css" type="text/css" />
 	<link rel="stylesheet" href="http://dev.plone.org/plone/chrome/common/css/code.css" type="text/css" />
-
-	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.5.2/jquery-ui.min.js" type="text/javascript"></script>
 
 </head>
 <body id="main">
