--- a/new.plone.org/static/trac.html
+++ b/new.plone.org/static/trac.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-	<title>plone.org redesign prototype</title>
+	<title>Plone Development</title>
 	<link rel="stylesheet" href="http://plone.org/plone.css" type="text/css" media="screen" />
 	<!--[if IE]>
         <style type="text/css" media="all">@import url(/ie.css);</style>
