--- a/new.plone.org/static/trac.html
+++ b/new.plone.org/static/trac.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	<title>Plone Development</title>
-	<link rel="stylesheet" href="http://plone.org/plone.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="http://new.plone.org/plone.css" type="text/css" media="screen" />
 	<!--[if IE]>
         <style type="text/css" media="all">@import url(/ie.css);</style>
     <![endif]-->	
