Updating site map.
svn path=/new.plone.org/trunk/; revision=24983

--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -115,8 +115,8 @@
 
 		<dl>
 			<dt><a href="/documentation">Documentation</a></dt>
-			<dd><a href="/documentation/faq">FAQs                      </a></dd>
-			<!-- <dd><a href="">Tutorial videos           </a></dd> -->
+			<dd><a href="/documentation/faq/">FAQs                      </a></dd>
+			<dd><a href="/documentation/movies/">Tutorial videos           </a></dd>
 			<dd><a href="/documentation/manual">Manuals                   </a></dd>
 			<dd><a href="/documentation/books">Books                     </a></dd>
 			<!-- <dd><a href="">Knowledge Base            </a></dd> -->
