--- a/new.plone.org/static/trac.html
+++ b/new.plone.org/static/trac.html
@@ -106,8 +106,8 @@
 
 		<dl>
 			<dt><a href="/documentation">Documentation</a></dt>
-			<dd><a href="/documentation/faq">FAQs                      </a></dd>
-			<!-- <dd><a href="">Tutorial videos           </a></dd> -->
+			<dd><a href="/documentation/faq/">FAQs                      </a></dd>
+			<dd><a href="/documentation/movies/">Tutorial videos           </a></dd>
 			<dd><a href="/documentation/manual">Manuals                   </a></dd>
 			<dd><a href="/documentation/books">Books                     </a></dd>
 			<!-- <dd><a href="">Knowledge Base            </a></dd> -->
@@ -122,8 +122,8 @@
 			<!-- <dd><a href="http://dev.plone.org/plone/newticket">Suggest new features    </a></dd> -->
 			<dd><a href="http://dev.plone.org/plone/timeline">Latest changes</a></dd>
 			<dd><a href="http://dev.plone.org/plone/browse">Browse source   </a></dd>
-			<dd><a href="/about/contributing">Contribute to Plone           </a></dd>
-			<dd><a href="http://planet.plone.org">Community blogs                </a></dd>
+			<dd><a href="http://dev.plone.org/plone">Contribute to Plone    </a></dd>
+			<dd><a href="http://planet.plone.org">Community blogs           </a></dd>
 		</dl>
 
 		<dl>
@@ -148,7 +148,7 @@
 			<dd><a href="/events/training">Training                    </a></dd>
 		</dl>
 	</div>
-</div>
+
 
 <script type="text/javascript"> 
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
