Try using replace instead.
svn path=/new.plone.org/trunk/; revision=25036

--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -5,6 +5,7 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	<title>plone.org</title>
+  <base href="http://plone.org/" />
 
 	<link rel="alternate" type="application/rss+xml" href="http://plone.org/news/newslisting/RSS" title="Plone news" /> 
 	<link rel="alternate" type="application/rss+xml" href="http://plone.org/events/community/upcoming-events/RSS" title="Upcoming Plone events" /> 
