Avoiding blue flicker on intial render by adding an extra wrapper div. Needs to be tested in IE6 too, since footer approach changed.
svn path=/new.plone.org/trunk/; revision=25216

--- a/new.plone.org/static/originals/blank.html
+++ b/new.plone.org/static/originals/blank.html
@@ -12,9 +12,10 @@
         <style type="text/css" media="all">@import url(../ie.css);</style>
     <![endif]-->
 </head>
-<body id="main">
-<div id="outer-wrapper"><div id="inner-wrapper">
+<body>
+<div id="main">
 
+<div id="outer-wrapper"><div id="inner-wrapper">
 
 <div id="nav">		
 
@@ -61,5 +62,6 @@
 	</div>
 </div>
 
+</div>
 </body>
 </html>
