--- a/new.plone.org/static/originals/developers.html
+++ b/new.plone.org/static/originals/developers.html
@@ -13,7 +13,9 @@
     <![endif]-->	
 	<script type="text/javascript" src="slider.js"></script>
 </head>
-<body id="main">
+<body>
+<div id="main">
+
 <div id="outer-wrapper"><div id="inner-wrapper">
 
 
@@ -103,5 +105,6 @@
 	</div>
 </div>
 
+</div>
 </body>
 </html>
