--- a/new.plone.org/static/originals/documentation.html
+++ b/new.plone.org/static/originals/documentation.html
@@ -22,8 +22,9 @@
 	</script>
 
 </head>
-<body id="main">
-	
+<body>
+<div id="main">
+
 <div id="outer-wrapper"><div id="inner-wrapper">
 
 
@@ -587,5 +588,6 @@
 	</div>
 </div>
 
+</div>
 </body>
 </html>
