--- a/new.plone.org/static/originals/foundation.html
+++ b/new.plone.org/static/originals/foundation.html
@@ -12,7 +12,9 @@
         <style type="text/css" media="all">@import url(../ie.css);</style>
     <![endif]-->	
 </head>
-<body id="main">
+<body>
+<div id="main">
+
 <div id="outer-wrapper"><div id="inner-wrapper">
 
 
@@ -66,5 +68,6 @@
 	</div>
 </div>
 
+</div>
 </body>
 </html>
