--- a/new.plone.org/static/originals/frontpage.html
+++ b/new.plone.org/static/originals/frontpage.html
@@ -22,7 +22,8 @@
 	</script>
 
 </head>
-<body id="main">
+<body>
+<div id="main">
 
 <div id="outer-wrapper"><div id="inner-wrapper">
 
@@ -89,7 +90,7 @@
 	<div class="grid-row">
 		<div class="grid-cell width-quarter position-leftmost">
 			<div id="current" class="box">
-				<h1>Plone by Numbers</h1>
+				<h1>About Plone</h1>
 				<ul>
 					<li class="spotlight">
 						Plone is one of the <strong>top 2%</strong> open source projects
@@ -243,7 +244,7 @@
 	<a id="footer-logo" 
 	   href="http://plone.org" 
 	   title="Plone CMS, the open source content management system">
-		<img alt="" src="/images/footer-logo.png" />
+		<img alt="" src="../images/footer-logo.png" />
 	</a>
 	<div id="footer-text">
 		<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
@@ -317,6 +318,8 @@
 			<dd><a href="/events/training">Training                    </a></dd>
 		</dl>
 	</div>
+</div>
+
 </div>
 </body>
 </html>
