--- a/new.plone.org/static/originals/support.html
+++ b/new.plone.org/static/originals/support.html
@@ -12,11 +12,13 @@
         <style type="text/css" media="all">@import url(../ie.css);</style>
     <![endif]-->	
 </head>
-<body id="main">
+<body>
+<div id="main">
+
 <div id="outer-wrapper"><div id="inner-wrapper">
 
 
-<div id="nav">		
+<div id="nav">
 
 	<div id="search">
 		<input type="search" value="Search Support…" />
@@ -64,5 +66,6 @@
 	</div>
 </div>
 
+</div>
 </body>
 </html>
