--- a/new.plone.org/static/originals/enterprise.html
+++ b/new.plone.org/static/originals/enterprise.html
@@ -15,9 +15,10 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
 
 </head>
-<body id="main">
-<div id="outer-wrapper"><div id="inner-wrapper">
+<body>
+<div id="main">
 
+<div id="outer-wrapper"><div id="inner-wrapper">
 
 <div id="nav">		
 
@@ -94,5 +95,6 @@
 	</div>
 </div>
 
+</div>
 </body>
 </html>
