--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -21,7 +21,8 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js" type="text/javascript"></script>
 
 </head>
-<body id="main">
+<body>
+<div id="main">
 
 <div id="outer-wrapper"><div id="inner-wrapper">
 
@@ -160,6 +161,7 @@
 	</div>
 </div>
 
+</div>
 <script type="text/javascript"> 
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
