--- a/new.plone.org/static/trac.html
+++ b/new.plone.org/static/trac.html
@@ -14,7 +14,8 @@
 	<link rel="stylesheet" href="http://dev.plone.org/plone/chrome/common/css/code.css" type="text/css" />
 
 </head>
-<body id="main">
+<body>
+<div id="main">
 
 <div id="outer-wrapper"><div id="inner-wrapper">
 
@@ -148,8 +149,9 @@
 			<dd><a href="/events/training">Training                    </a></dd>
 		</dl>
 	</div>
+</div>
 
-
+</div>
 <script type="text/javascript"> 
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
