--- a/new.plone.org/static/trac.html
+++ b/new.plone.org/static/trac.html
@@ -15,7 +15,6 @@
 
 </head>
 <body>
-<div id="main">
 
 <div id="outer-wrapper"><div id="inner-wrapper">
 
@@ -71,87 +70,87 @@
 
 </div></div> <!-- end inner/outer-wrapper -->
 
-<div id="footer">
-	<a id="footer-logo" 
-	   href="http://plone.org" 
-	   title="Plone CMS, the open source content management system">
-		<img alt="" src="/images/footer-logo.png" />
-	</a>
-	<div id="footer-text">
-		<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
-		<p>Plone<sup>®</sup> and the Plone logo are registered trademarks of Plone Foundation. Distributed under the GPL license. <!-- Plone &hearts; You  --> You’re looking good today.</p>
-	</div>
+<div id="footer-wrapper">
+	<div id="footer">
+		<a id="footer-logo" 
+		   href="http://plone.org" 
+		   title="Plone CMS, the open source content management system">
+			<img alt="" src="../images/footer-logo.png" />
+		</a>
+			<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
+			<p>Plone<sup>®</sup> and the Plone logo are registered trademarks of Plone Foundation. Distributed under the GPL license. <!-- Plone &hearts; You  --> You’re looking good today.</p>
 	
-	<div id="sitemap">
+		<div id="sitemap">
 
-		<!-- <dl>
-			<dt><a href="">Plone for…</a></dt>
-			<dd><a href="">Small/Medium Business </a></dd>
-			<dd><a href="">Enterprise            </a></dd>
-			<dd><a href="">Non-profits           </a></dd>
-			<dd><a href="">Government            </a></dd>
-			<dd><a href="">Education             </a></dd>
-			<dd><a href="">Science               </a></dd>
-			<dd><a href="">Media &amp; Publishing</a></dd>
-		</dl> -->
+			<!-- <dl>
+				<dt><a href="">Plone for…</a></dt>
+				<dd><a href="">Small/Medium Business </a></dd>
+				<dd><a href="">Enterprise            </a></dd>
+				<dd><a href="">Non-profits           </a></dd>
+				<dd><a href="">Government            </a></dd>
+				<dd><a href="">Education             </a></dd>
+				<dd><a href="">Science               </a></dd>
+				<dd><a href="">Media &amp; Publishing</a></dd>
+			</dl> -->
 
-		<dl>
-			<dt><a href="/products">Downloads</a></dt>
-			<dd><a href="/download">Get Plone                           </a></dd>
-			<dd><a href="/products?getCategories=themes">Themes         </a></dd>
-			<dd><a href="/products?getCategories=dev">Development tools </a></dd>
-			<dd><a href="/products?getCategories=auth">Authentication   </a></dd>
-			<dd><a href="/products">…and more.     </a></dd>
-			<dd><a href="/products/createObject?type_name=PSCProject">Submit your add-on&hellip;</a></dd>
-		</dl>
+			<dl>
+				<dt><a href="/products">Downloads</a></dt>
+				<dd><a href="/download">Get Plone                           </a></dd>
+				<dd><a href="/products?getCategories=themes">Themes         </a></dd>
+				<dd><a href="/products?getCategories=dev">Development tools </a></dd>
+				<dd><a href="/products?getCategories=auth">Authentication   </a></dd>
+				<dd><a href="/products">…and more.     </a></dd>
+				<dd><a href="/products/createObject?type_name=PSCProject">Submit your add-on&hellip;</a></dd>
+			</dl>
 
-		<dl>
-			<dt><a href="/documentation">Documentation</a></dt>
-			<dd><a href="/documentation/faq/">FAQs                      </a></dd>
-			<dd><a href="/documentation/movies/">Tutorial videos           </a></dd>
-			<dd><a href="/documentation/manual">Manuals                   </a></dd>
-			<dd><a href="/documentation/books">Books                     </a></dd>
-			<!-- <dd><a href="">Knowledge Base            </a></dd> -->
-			<dd><a href="/documentation/error">Error Reference           </a></dd>
-			<!-- <dd><a href="">Module documentation      </a></dd> -->
-		</dl>
+			<dl>
+				<dt><a href="/documentation">Documentation</a></dt>
+				<dd><a href="/documentation/faq/">FAQs                      </a></dd>
+				<dd><a href="/documentation/movies/">Tutorial videos           </a></dd>
+				<dd><a href="/documentation/manual">Manuals                   </a></dd>
+				<dd><a href="/documentation/books">Books                     </a></dd>
+				<!-- <dd><a href="">Knowledge Base            </a></dd> -->
+				<dd><a href="/documentation/error">Error Reference           </a></dd>
+				<!-- <dd><a href="">Module documentation      </a></dd> -->
+			</dl>
 
-		<dl>
-			<dt><a href="http://dev.plone.org/plone">Developers</a></dt>
-			<dd><a href="http://dev.plone.org/plone/roadmap">Roadmap        </a></dd>
-			<dd><a href="http://dev.plone.org/plone/newticket">Report bugs  </a></dd>
-			<!-- <dd><a href="http://dev.plone.org/plone/newticket">Suggest new features    </a></dd> -->
-			<dd><a href="http://dev.plone.org/plone/timeline">Latest changes</a></dd>
-			<dd><a href="http://dev.plone.org/plone/browse">Browse source   </a></dd>
-			<dd><a href="http://dev.plone.org/plone">Contribute to Plone    </a></dd>
-			<dd><a href="http://planet.plone.org">Community blogs           </a></dd>
-		</dl>
+			<dl>
+				<dt><a href="http://dev.plone.org/plone">Developers</a></dt>
+				<dd><a href="http://dev.plone.org/plone/roadmap">Roadmap        </a></dd>
+				<dd><a href="http://dev.plone.org/plone/newticket">Report bugs  </a></dd>
+				<!-- <dd><a href="http://dev.plone.org/plone/newticket">Suggest new features    </a></dd> -->
+				<dd><a href="http://dev.plone.org/plone/timeline">Latest changes</a></dd>
+				<dd><a href="http://dev.plone.org/plone/browse">Browse source   </a></dd>
+				<dd><a href="http://dev.plone.org/plone">Contribute to Plone    </a></dd>
+				<dd><a href="http://planet.plone.org">Community blogs           </a></dd>
+			</dl>
 
-		<dl>
-			<dt><a href="/foundation">Plone Foundation</a></dt>
-			<dd><a href="/foundation/foundation-donations">Donate     </a></dd>
-			<dd><a href="/foundation/donors">Sponsors                 </a></dd>
-			<dd><a href="/foundation/meetings/minutes">Meeting minutes</a></dd>
-			<dd><a href="/team/FoundationBoard">Current board         </a></dd>
-			<dd><a href="/foundation/members">Foundation members      </a></dd>
-			<dd><a href="/foundation/membership">Apply for membership </a></dd>
-			<dd><a href="/foundation#contact">Contact                 </a></dd>
-		</dl>
+			<dl>
+				<dt><a href="/foundation">Plone Foundation</a></dt>
+				<dd><a href="/foundation/foundation-donations">Donate     </a></dd>
+				<dd><a href="/foundation/donors">Sponsors                 </a></dd>
+				<dd><a href="/foundation/meetings/minutes">Meeting minutes</a></dd>
+				<dd><a href="/team/FoundationBoard">Current board         </a></dd>
+				<dd><a href="/foundation/members">Foundation members      </a></dd>
+				<dd><a href="/foundation/membership">Apply for membership </a></dd>
+				<dd><a href="/foundation#contact">Contact                 </a></dd>
+			</dl>
 
-		<dl>
-			<dt><a href="/support">Support</a></dt>
-			<dd><a href="http://plone.net/providers">Commercial services</a></dd>
-			<dd><a href="/support/chat">Chat room                      </a></dd>
-			<dd><a href="/support/forums">Forums                       </a></dd>
-			<dd><a href="/support/for">Sector-specific forums          </a></dd>
-			<dd><a href="/support/region">Region-specific forums       </a></dd>
-			<dd><a href="/support/local-user-groups">Local user groups </a></dd>
-			<dd><a href="/events/training">Training                    </a></dd>
-		</dl>
+			<dl>
+				<dt><a href="/support">Support</a></dt>
+				<dd><a href="http://plone.net/providers">Commercial services</a></dd>
+				<dd><a href="/support/chat">Chat room                      </a></dd>
+				<dd><a href="/support/forums">Forums                       </a></dd>
+				<dd><a href="/support/for">Sector-specific forums          </a></dd>
+				<dd><a href="/support/region">Region-specific forums       </a></dd>
+				<dd><a href="/support/local-user-groups">Local user groups </a></dd>
+				<dd><a href="/events/training">Training                    </a></dd>
+			</dl>
+		</div>
 	</div>
 </div>
 
-</div>
+
 <script type="text/javascript"> 
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
