--- a/new.plone.org/static/trac.html
+++ b/new.plone.org/static/trac.html
@@ -75,7 +75,7 @@
 		<a id="footer-logo" 
 		   href="http://plone.org" 
 		   title="Plone CMS, the open source content management system">
-			<img alt="" src="../images/footer-logo.png" />
+			<img alt="" src="/images/footer-logo.png" />
 		</a>
 			<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
 			<p>Plone<sup>®</sup> and the Plone logo are registered trademarks of Plone Foundation. Distributed under the GPL license. <!-- Plone &hearts; You  --> You’re looking good today.</p>
