--- a/new.plone.org/static/originals/support.html
+++ b/new.plone.org/static/originals/support.html
@@ -50,10 +50,48 @@
 <div id="content-wrapper">
 
 	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
+	<p>Some content</p>
 
 </div>
 
-</div></div> <!-- end inner/outer-wrapper -->
+</div><!-- end inner-wrapper -->
+<div id="push"></div>
+</div> <!-- end outer-wrapper -->
 
 <div id="footer-wrapper">
 	<div id="footer">
