--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -75,9 +75,9 @@
 	</div> <!-- End row -->
 </div>
 
-<div style="clear:both">&nbsp;</div>
-
-</div></div> <!-- end inner/outer-wrapper -->
+</div><!-- end inner-wrapper -->
+<div id="push"></div>
+</div> <!-- end outer-wrapper -->
 
 <div id="footer-wrapper">
 	<div id="footer">
