--- a/new.plone.org/static/trac.html
+++ b/new.plone.org/static/trac.html
@@ -68,7 +68,9 @@
     </div>
 </div>
 
-</div></div> <!-- end inner/outer-wrapper -->
+</div><!-- end inner-wrapper -->
+<div id="push"></div>
+</div> <!-- end outer-wrapper -->
 
 <div id="footer-wrapper">
 	<div id="footer">
