--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -75,6 +75,8 @@
 	</div> <!-- End row -->
 </div>
 
+<div style="clear:both">&nbsp;</div>
+
 </div><!-- end inner-wrapper -->
 <div id="push"></div>
 </div> <!-- end outer-wrapper -->
