Let's see if we can make sprites work on this div.
svn path=/new.plone.org/trunk/; revision=25470

--- a/new.plone.org/static/plone-wide.html
+++ b/new.plone.org/static/plone-wide.html
@@ -72,6 +72,7 @@
 </div> <!-- end outer-wrapper -->
 
 <div id="footer-wrapper">
+	<div id="footer-gradient"></div>
 	<div id="footer">
 		<a id="footer-logo" 
 		   href="http://plone.org" 
