--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -80,6 +80,7 @@
 </div> <!-- end outer-wrapper -->
 
 <div id="footer-wrapper">
+	<div id="footer-gradient"></div>
 	<div id="footer">
 		<a id="footer-logo" 
 		   href="http://plone.org" 
