--- a/new.plone.org/static/trac.html
+++ b/new.plone.org/static/trac.html
@@ -13,6 +13,10 @@
 	<link rel="stylesheet" href="http://dev.plone.org/plone/chrome/common/css/diff.css" type="text/css" />
 	<link rel="stylesheet" href="http://dev.plone.org/plone/chrome/common/css/code.css" type="text/css" />
 
+	<!--[if IE]>
+		<style type="text/css" media="all">@import url(/ie.css);</style>
+	<![endif]-->	
+
 </head>
 <body>
 
