Removing about 3K of CSS by combining selectors.
svn path=/new.plone.org/trunk/; revision=25481

--- a/new.plone.org/static/originals/documentation.html
+++ b/new.plone.org/static/originals/documentation.html
@@ -61,7 +61,7 @@
 	<div class="grid-row">
 
 		<div class="grid-cell position-two-thirds width-third">
-			<div class="pullout">
+			<div class="splash pullout">
 				<a class="close-panel"
 				   href=""
 				   style="float: right; display: block; margin-top: -1em"
@@ -94,16 +94,14 @@
 
 	<div class="grid-row">
 		<div class="grid-cell position-leftmost width-two-thirds">
-			<div class="pane">
+			<div class="collapsible pane">
 
 
 				<div class="pagesearch">
 					<input type="search" value="Search Documentation…" size="25" />
-					&nbsp;
-					<a href="">Advanced search</a>
 				</div>
 
-				<h1>Documentation <a href="" class="versions">for Plone 3 ▼</a></h1>
+				<h2>Documentation <a href="" class="versions">for Plone 3 ▼</a></h2>
 
 				<div class="" id="categories">
 					<h2>Find documentation by topic</h2>
