--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -86,7 +86,7 @@
 		   href="http://plone.org" 
 		   title="Plone CMS, the open source content management system"></a>
 			<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
-			<p>Plone<sup>®</sup> and the Plone logo are registered trademarks of Plone Foundation. Distributed under the GPL license. <!-- Plone &hearts; You  --> You’re looking good today.</p>
+			<p>Plone<sup>®</sup> and the Plone logo are registered trademarks of Plone Foundation.</p>
 	
 		<div id="sitemap">
 
