--- a/new.plone.org/static/plone-wide.html
+++ b/new.plone.org/static/plone-wide.html
@@ -36,7 +36,7 @@
 	</div>
 	
 	<ul id="main-nav" class="navigation">
-		<li><a href=".">Test</a></li>
+		<li><a href="http://plone.org/"><img src="images/plone-logo-24.png" /></a></li>
 	</ul>
 
 </div>
