--- a/new.plone.org/static/plone-wide.html
+++ b/new.plone.org/static/plone-wide.html
@@ -36,7 +36,12 @@
 	</div>
 	
 	<ul id="main-nav" class="navigation">
-		<li><a href="http://plone.org/"><img src="images/plone-logo-24.png" /></a></li>
+		<li><a href=".">Home</a></li
+		><li><a href="downloads.html">Downloads</a></li
+		><li><a href="documentation.html">Documentation</a></li
+		><li><a href="developers.html">Developers</a></li
+		><li><a href="foundation.html">Plone&nbsp;Foundation</a></li
+		><li><a href="support.html">Support</a></li>
 	</ul>
 
 </div>
