--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -7,10 +7,11 @@
 	<title>plone.org</title>
   <base href="http://plone.org/" />
 
-	<link rel="alternate" type="application/rss+xml" href="http://plone.org/news/newslisting/RSS" title="Plone news" /> 
-	<link rel="alternate" type="application/rss+xml" href="http://plone.org/events/community/upcoming-events/RSS" title="Upcoming Plone events" /> 
-	<link rel="alternate" type="application/rss+xml" href="http://plone.org/search_rss?portal_type=PSCRelease&sort_on=Date&sort_order=reverse&review_state=alpha&review_state=beta&review_state=release-candidate&review_state=final" title="Latest Plone &amp; add-on releases" /> 
-	<link rel="alternate" type="application/rss+xml" href="http://plone.org/events/community/training/training-announcements/RSS" title="Upcoming Plone training" /> 
+	<link rel="alternate" type="application/rss+xml" href="http://feeds.plone.org/plonenews" title="Plone News" /> 
+	<link rel="alternate" type="application/rss+xml" href="http://feeds.plone.org/plonereleases" title="Plone Releases" /> 
+	<link rel="alternate" type="application/rss+xml" href="http://feeds.plone.org/ploneevents" title="Upcoming Plone Events" /> 
+	<link rel="alternate" type="application/rss+xml" href="http://feeds.plone.org/ploneaddons" title="Latest Plone &amp; Add-on Releases" /> 
+	<link rel="alternate" type="application/rss+xml" href="http://feeds.plone.org/plonetraining" title="Upcoming Plone Training" /> 
 
 	<link rel="stylesheet" href="/plone.css" type="text/css" media="screen" />
 
