--- a/new.plone.org/static/trac.html
+++ b/new.plone.org/static/trac.html
@@ -5,6 +5,13 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	<title>Plone Development</title>
+
+	<link rel="alternate" type="application/rss+xml" href="http://feeds.plone.org/plonenews" title="Plone News" /> 
+	<link rel="alternate" type="application/rss+xml" href="http://feeds.plone.org/plonereleases" title="Plone Releases" /> 
+	<link rel="alternate" type="application/rss+xml" href="http://feeds.plone.org/ploneevents" title="Upcoming Plone Events" /> 
+	<link rel="alternate" type="application/rss+xml" href="http://feeds.plone.org/ploneaddons" title="Latest Plone &amp; Add-on Releases" /> 
+	<link rel="alternate" type="application/rss+xml" href="http://feeds.plone.org/plonetraining" title="Upcoming Plone Training" /> 
+
 	<link rel="stylesheet" href="http://new.plone.org/plone.css" type="text/css" media="screen" />
 	<!--[if IE]>
         <style type="text/css" media="all">@import url(/ie.css);</style>
