--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -27,9 +27,11 @@
 <div id="nav">
 
 	<form id="search" name="searchform" action="http://plone.org/search"> 
-		<input name="SearchableText" type="search" 
-			 title="Search this site…" accesskey="4"
-			 class="inputLabel" /> 
+		<input id="search-site"
+			name="SearchableText" type="search" 
+			title="Search this site…" accesskey="4"
+			class="inputLabel" size="10"
+			/> 
 	</form>
 	
 	<div id="user">
