--- a/new.plone.org/static/trac.html
+++ b/new.plone.org/static/trac.html
@@ -20,9 +20,8 @@
 	<link rel="stylesheet" href="http://dev.plone.org/plone/chrome/common/css/diff.css" type="text/css" />
 	<link rel="stylesheet" href="http://dev.plone.org/plone/chrome/common/css/code.css" type="text/css" />
 
-	<!--[if IE]>
-		<style type="text/css" media="all">@import url(/ie.css);</style>
-	<![endif]-->	
+	<!--[if IE]><style type="text/css" media="all">@import url(/ie.css);</style><![endif]-->	
+	<!--[if lte IE 6]><script src="ie6warn.js" type="text/javascript"></script><![endif]-->
 
 </head>
 <body>
