--- a/new.plone.org/static/plone-wide.html
+++ b/new.plone.org/static/plone-wide.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="/plone.css" type="text/css" media="screen" />
 
 	<!--[if IE]><style type="text/css" media="all">@import url(/ie.css);</style><![endif]-->	
-	<!--[if lte IE 6]><script src="ie6warn.js" type="text/javascript"></script><![endif]-->
+	<!--[if lte IE 6]><script src="/ie6warn.js" type="text/javascript"></script><![endif]-->
 
 
 </head>
