--- a/new.plone.org/static/plone-wide.html
+++ b/new.plone.org/static/plone-wide.html
@@ -78,8 +78,8 @@
 		<a id="footer-logo" 
 		   href="http://plone.org" 
 		   title="Plone CMS, the open source content management system"></a>
-			<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2009 by the Plone Foundation et al.</p>
-			<p>Plone<sup>®</sup> and the Plone logo are registered trademarks of Plone Foundation.</p>
+			<p>The Plone<sup>&reg;</sup> CMS — Open Source Content Management System is Copyright &copy; 2000&ndash;2009 by the Plone Foundation et al.</p>
+			<p>Plone<sup>&reg;</sup> and the Plone logo are registered trademarks of the Plone Foundation. You&#x2019;re looking good today.</p>
 	
 		<div id="sitemap">
 
