s/Contribute/Get Involved/g
svn path=/new.plone.org/trunk/; revision=25992

--- a/new.plone.org/static/plone-wide.html
+++ b/new.plone.org/static/plone-wide.html
@@ -42,7 +42,7 @@
 		<li><a href=".">Home</a></li
 		><li><a href="downloads.html">Downloads</a></li
 		><li><a href="documentation.html">Documentation</a></li
-		><li><a href="developers.html">Contribute</a></li
+		><li><a href="developers.html">Get Involved</a></li
 		><li><a href="foundation.html">Plone&nbsp;Foundation</a></li
 		><li><a href="support.html">Support</a></li>
 	</ul>
