--- a/new.plone.org/static/trac.html
+++ b/new.plone.org/static/trac.html
@@ -46,7 +46,7 @@
 		<li><a href="http://plone.org">Home</a></li
 		><li><a href="http://plone.org/downloads">Downloads</a></li
 		><li><a href="http://plone.org/documentation">Documentation</a></li
-		><li class="selected"><a href="http://dev.plone.org/plone">Contribute</a></li
+		><li class="selected"><a href="http://dev.plone.org/plone">Get Involved</a></li
 		><li><a href="http://plone.org/foundation">Plone&nbsp;Foundation</a></li
 		><li><a href="http://plone.org/support">Support</a></li>
 	</ul>
