s/Welcome/Welcome to/
svn path=/plone.org/deus-static/trunk/; revision=40690

--- a/antiloop-static/index.html
+++ b/antiloop-static/index.html
@@ -9,7 +9,7 @@
 <body>
 <h1><a href="http://plone.org"><img alt="" src=
 "logo.png" /></a></h1>
-<h1 style="text-align:center">Welcome <i>antiloop.plone.org</i>!</h1>
+<h1 style="text-align:center">Welcome to <i>antiloop.plone.org</i>!</h1>
 <h4 style="text-align:center">(A <a href=
 "http://plone.org">Plone</a> community-managed resource.)</h4>
 <h3 style="text-align:center">Here you will find:</h3>
